# CyberForge-Dashboard

./: .flake8  .gitignore  .replit  DEPLOYMENT.md  README.md  alembic.ini  app.py  create_subscription_tables.py  deploy_to_hf.py  deploy_to_hf.sh  hf_app.py  hf_database.py  huggingface-space.yml  pyproject.toml  replit.nix  requirements_hf.txt  run_migration.py  security_hf.py  test_db.py  test_hf_token.sh
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  deploy-to-huggingface.yml  huggingface.yml
.streamlit/: config.toml
attached_assets/: Pasted-Excellent-let-s-engineer-this-cleanly-and-comprehensively-Here-s-a-full-technical-breakdown-to-se-1744456010784.txt  Pasted-LookupError-free-is-not-among-the-defined-enum-values-Enum-name-subscriptiontier-Possible-valu-1744714099677.txt  Pasted-Your-task-is-to-design-and-implement-a-database-solution-for-the-existing-Dark-Web-Intelligence-Dash-1744469957919.txt
components/: alerts.py  dashboard.py  deployment_recommendations.py  live_feed.py  monitoring.py  reports.py  search_trends.py  security_wizard.py  subscriptions.py  threats.py  web_scraper.py
config/: config.py
docs/source/: architecture.rst  conf.py  index.rst  installation.rst
migrations/: env.py
migrations/versions/: create_deployment_tables.py  create_subscription_tables.py
scripts/: create_initial_migration.py
src/: __init__.py  celery_app.py  database_init.py  streamlit_database.py  streamlit_subscription_services.py  tasks.py
src/api/: __init__.py  auth.py  database.py  main.py  schemas.py  security.py
src/api/routers/: auth_router.py  scraping_router.py  threats_router.py
src/api/services/: __init__.py  alert_service.py  dark_web_content_service.py  deployment_recommendation_service.py  report_service.py  search_history_service.py  subscription_service.py  threat_service.py  user_service.py
src/cyberforge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/models/: __init__.py  alert.py  base.py  dark_web_content.py  deployment.py  indicator.py  report.py  search_history.py  subscription.py  threat.py  user.py
src/scripts/: __init__.py  init_db.py
src/services/: osint_integration.py  scraper.py  tor_proxy.py
src/utils/: pii_masking.py
tests/: conftest.py  test_auth.py  test_scraper.py  test_threats.py
utils/: data_processing.py  visualization.py
