[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "streamlit-extras>=0.6.0",
    "streamlit>=1.44.1",
    "trafilatura>=2.0.0",
    "flask>=3.1.0",
    "sphinx>=8.2.3",
    "pytest>=8.3.5",
    "flake8>=7.2.0",
    "black>=25.1.0",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "sqlalchemy[asyncio]>=2.0.40",
    "psycopg2-binary>=2.9.10",
    "pytest-mock>=3.14.0",
    "redis>=5.2.1",
    "passlib[bcrypt]>=1.7.4",
    "uvicorn>=0.34.0",
    "asyncpg>=0.30.0",
    "alembic>=1.15.2",
    "celery>=5.5.1",
    "pydantic>=2.11.3",
    "python-jose[cryptography]>=3.4.0",
    "httpx>=0.28.1",
    "fastapi>=0.115.12",
]
